@startuml Classes

class ObjetoGeometrico {
  +Float area
  +Integer perimetro
  +Integer x
  +Integer y 
  .. Getters ..
  +Integer getArea()
  +Integer getPerimetro()
  +Integer getX()
  +Integer getY()
  .. Setters ..
  +Void setArea()
  +Void setPerimetro()
  +Void setX()
  +Void setY()
  ..
  +Void calcula_area()
  +Void calcula_perimetro()
  +String retornar_dados()
}

class Circulo{
  +Integer x
  +Integer y
  +Integer raio
  .. Getters ..
  +Integer getRaio()
  .. Setters ..
  +Void setRaio()
  ..
  +Integer calcula_area()
  +Integer calcula_perimetro()
  +String retornar_dados()
}

class Retangulo {
  +Integer x
  +Integer y

  +Integer calcula_area()
  +Integer calcula_perimetro()
}
class Triangulo {
  +Integer x
  +Integer y
  +Integer z

  +Integer calcula_area()
  +Integer calcula_perimetro()
  +String retornar_dados()
}

ObjetoGeometrico <|-- Circulo
ObjetoGeometrico <|-- Retangulo
ObjetoGeometrico <|-- Triangulo


object c{
x = 0
y = 0
raio = 2
}

object r{
x = 2
y = 2
}

object t{
x = 2
y = 2
z = 2
}

Circulo <-- c
Retangulo <-- r
Triangulo <-- t


@enduml
